# lispor

./: Main.hs  README.md  lispor.cabal
executable/: Main.hs
test/: Test.hs  TestOrAndVector.hs
