cabal-version: 2.4
name: lispor
version: 1.0

common deps
  default-language: Haskell2010
  build-depends: base

library
  import: deps
  hs-source-dirs: library
  exposed-modules: Library

executable lispor
  import: deps
  hs-source-dirs: executable
  main-is: Main.hs
  build-depends: base, lispor

test-suite test
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends: hspec, lispor, QuickCheck
